Updating ID Card assignment

--- a/HTML5/IDCard.html
+++ b/HTML5/IDCard.html
@@ -11,6 +11,15 @@
 	<body>
 		<div class = "container">
 			<div class = "card">
+				<div class = "header">
+					<img src="/Images/VITBhopal_W.png">
+				<picture>
+					<img src="/Images/HTML5.png">
+				</picture>
+				<div class = "info">
+					<h1>Rishikesh M</h1>
+					<h2>21BCG10072</h2>
+				</div>
 			</div>
 		</div>
 	</body>
