Adding JavaScript example tasks

--- a/HTML5/ScriptingBasics.html
+++ b/HTML5/ScriptingBasics.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>Scripting Basics</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
 
+    <body>
+        <script src = "/JS/ScriptingBasics.js"></script>
+    
+    </body>
+</html>
